# Infant

./: CMakeLists.txt
inc/0.tensors/: array.h  common_prefix.h  cuda_ctx.h  predefs.h  scalar.h  string_util.h  tensor.h  vector.h
inc/1.functors/: bin_func.h  functor.h  functor_graph.h  tensor_node.h  un_func.h  unmo_func.h
inc/2.operators/: attentions.h  config_base.h  conv.h  fc.h  norm.h  operator_base.h  pooling.h  rnn.h  transformer.h
inc/3.network/: [deprecate]loss.h  [deprecate]model.h  [deprecate]sequential.h  [empty]classic_networks.h  [empty]param_norm.h  data_loader.h  metrics.h  network.h  sample_cnn.h  transformer.h
inc/4.train/: [deprecate]trainer_base.h  [empty]distributed_trainer.h  data_loader.h  optimizer_base.h  raw_trainer.h  trainers.h
inc/5.inference/: metrics.h
inc/trees/: gbdt.h
src/0.tensors/: cuda_ctx.cpp  cuda_ctx.cu  cuda_kernels.cu  predefs.cc  vector.cc
src/1.functors/: bin_func.cc  functor.cc  functor_graph.cc  tensor_node.cc  un_func.cc  unmo_func.cc
src/2.operators/: config_base.cc  operator_base.cc
unit_tests/: arithmetic_input.txt  arithmetic_output.txt  create_transformer_data.py  test.txt  test_array.cc  test_attentions.cc  test_config_base.cc  test_conv.cc  test_dataloaders.cc  test_fc.cc  test_functor_graph.cc  test_gbdt.cc  test_main.cc  test_norm.cc  test_operator_base.cc  test_optimizers.cc  test_pooling.cc  test_raw_trainer.cc  test_rnn.cc  test_string_util.cc  test_tensor.cc  test_tensor_node.cc  test_trainers.cc  test_transformer.cc  test_vector.cc  transformer_model.txt  unit_test.h
